# zig-forge

./: .dockerignore  .gitignore  README.md  build.zig
programs/: PROGRAM_STATUS.md  build-all-platforms.sh  build-ios-libs.sh  test-all-builds.sh
programs/async_scheduler/: ASYNC_SCHEDULER_COMPLETE.md  README.md  build.zig
programs/audio_forge/: ARCHITECTURE.md  README.md  build.zig
programs/cerberus/: BENCHMARK_RESULTS.md  GPU_TPU_COMPARISON.md  HYDRA_TPU_RESULTS.md  HYDRA_TPU_USAGE.md  TPU_SETUP.md  TPU_TROUBLESHOOT.md  V2_ANALYSIS.md  cerberus.py  cerberus_config_v1.json  cerberus_config_v2.json  cerberus_predictor_v1.keras  cerberus_predictor_v2.keras  cerberus_tpu_training.ipynb  hydra_tpu.py  train_v2.py  training_history_v1.json  training_history_v2.json
programs/chaos_engineering/: zig_chaos_rocket_spec.md
programs/chronos_engine/: README.md  build.zig  chronos-ctl-client.zig  chronos-ctl-dbus.zig  chronos-ctl.zig  chronos-stamp-cognitive-direct.zig  chronos-stamp-cognitive.zig  chronos-stamp-macos.zig  chronos-stamp.zig  chronos.zig  chronos_client.zig  chronos_client_dbus.zig  chronos_logger.zig  chronos_logger_simple.zig  chronosd-cognitive.zig  chronosd-dbus-test.zig  chronosd-dbus.zig  chronosd.zig  cognitive-graph.zig  cognitive-watcher.zig  cognitive_metrics.zig  cognitive_states.zig  conductor-daemon.zig  conductor-dbus-bridge.zig  dbus_interface.zig  findings.md  phi_timestamp.zig  socket_protocol.zig  svg_exporter.zig
programs/claude-shepherd/: build.zig
programs/cognitive_telemetry_kit/: ANTHROPIC_RESPONSE.md  LICENSE-COMMERCIAL  LICENSE-GPL  MANIFEST.md  README.md  RELEASE_NOTES.md  build.zig  test-hook-fixed.txt  test.txt
programs/cross-bin/: dash  make
programs/distributed_kv/: build.zig
programs/duck_agent_scribe/: build.zig
programs/duck_cache_scribe/: .gitignore  CLAUDE.md  README.md  build.zig  config.json  duckcache-scribe.service
programs/electrum_ffi/: build.zig
programs/financial_engine/: .gitignore  (+5 more)
programs/zig-qrcode/zigqr-sys/: Cargo.toml  build.rs
programs/zig-qrcode/zigqr-sys/src/: bindings.rs  encoder.rs  error.rs  lib.rs
programs/zig-quantum-encryption/quantum-vault-sys/: Cargo.toml  build.rs
programs/zig-quantum-encryption/quantum-vault-sys/src/: bindings.rs  error.rs  hybrid.rs  lib.rs  mldsa.rs  mlkem.rs  secure.rs
programs/zig_pdf_engine/android/src/main/cpp/: CMakeLists.txt
scripts/: build-patched-zig.sh  repack-for-xcode.sh  zig-macho-archive-alignment.patch
zig_core_utils/: FEATURE_PARITY.md  README.md  build-all.sh  install.sh
zig_doom/: build.zig  build.zig.zon  demo1_frame.ppm  doom.sh  e1m3.ppm  frame.ppm
zigix_dev/: .gitignore
(+2749 files in other folders)
